--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0",
+    "@nuxtjs/axios": "^5.4.1",
+    "@nuxtjs/pwa": "^3.0.0-beta.14",
+    "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "bootstrap": "^4.1.3"
+    "cross-env": "^5.2.0",
+    "jquery": "^3.3.1",
+    "jquery-bracket": "^0.11.1",
+    "nuxt": "^2.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
