--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "cross-env": "^5.2.0",
     "jquery": "^3.3.1",
     "jquery-bracket": "^0.11.1",
-    "nuxt": "^2.4.0",
-    "smartmenus": "^1.1.0"
+    "nuxt": "^2.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
