--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cross-env": "^5.2.0",
+    "daterangepicker": "^3.0.3",
     "jquery": "^3.3.1",
     "jquery-bracket": "^0.11.1",
     "nuxt": "^2.4.0"
