--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.6.6",
     "@nuxtjs/axios": "^5.5.1",
     "@nuxtjs/pwa": "^3.0.0-beta.14",
     "@nuxtjs/toast": "^3.2.1",
