--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/toast": "^3.2.1",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "chart.js": "^2.8.0",
     "cross-env": "^5.2.0",
     "daterangepicker": "^3.0.3",
     "indonesia-cities-regencies": "^2.0.0",
@@ -25,6 +26,7 @@
     "moment-timezone": "^0.5.25",
     "nuxt": "^2.4.0",
     "select2": "^4.0.6-rc.1",
+    "vue-chartjs": "^3.4.2",
     "vue-select": "^2.6.4"
   },
   "devDependencies": {
