--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "chart.js": "^2.8.0",
+    "chartjs-plugin-datalabels": "^0.6.0",
     "cross-env": "^5.2.0",
     "daterangepicker": "^3.0.3",
     "indonesia-cities-regencies": "^2.0.0",
