--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "nuxt": "^2.4.0",
     "select2": "^4.0.6-rc.1",
     "vue-chartjs": "^3.4.2",
-    "vue-select": "^2.6.4"
+    "vue-select": "^2.6.4",
+    "vue-upload-multiple-image": "^1.1.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
